syntax = "proto3";

import "google/protobuf/empty.proto";
import "google/protobuf/timestamp.proto";

package VegaExpress.Discovery;

service LoadBalancing {
    rpc GetMetadata(google.protobuf.Empty) returns (stream LoadBalancingModel); 
}

message LoadBalancingModel {
    int32 number_of_requests = 1;
    google.protobuf.Timestamp response_time = 2;
    string service_location = 3; // Optional field
}